macros/tests/sig3-fail.rs
#[macros::entry]
fn e_main(handle: ()) {}

fn main() {}
